--- a/source/_posts/【Java】02——面试整理（待完成）.html
+++ b/source/_posts/【Java】02——面试整理（待完成）.html
@@ -1,6 +1,15 @@
 ---
 layout: false
+title: 【Java】02——面试整理（待完成）
+date: 2017-01-24 14:37:40
+tags: [Java]
+categories: [Java]
 ---
+- Java面试整理
+<!-- more -->
+
+--------------------------------
+
 <!DOCTYPE html>
 <html>
 <head>
