--- a/source/_posts/【Java】02——面试整理（待完成）.html
+++ b/source/_posts/【Java】02——面试整理（待完成）.html
@@ -15,7 +15,7 @@ categories: [Java]
 <head>
 <meta charset="utf-8">
 <meta name="tool" content="leanote-desktop-app">
-<title>【面试】04-准备资料</title>
+<title>【Java】02——面试整理（待完成）</title>
 <style>
 
 *{font-family:"lucida grande","lucida sans unicode",lucida,helvetica,"Hiragino Sans GB","Microsoft YaHei","WenQuanYi Micro Hei",sans-serif;}
